{
  "version": 4,
  "terraform_version": "1.12.1",
  "serial": 115,
  "lineage": "a2067177-f8ac-742f-4656-cc4d80025016",
  "resources": [
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "Project1_sg_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:559050225570:security-group/sg-096bb52afd6a7b839",
            "description": "allow https access",
            "filter": null,
            "id": "sg-096bb52afd6a7b839",
            "name": "main-sg-https",
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0b16e539a6d9d52b8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "Project1_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-024f5fc4012b36169",
            "arn": "arn:aws:ec2:us-west-2:559050225570:elastic-ip/eipalloc-024f5fc4012b36169",
            "association_id": "eipassoc-03e589d9121120a2a",
            "domain": "vpc",
            "id": "eipalloc-024f5fc4012b36169",
            "network_border_group": "us-west-2",
            "network_interface": "eni-02b55d3ac199661e8",
            "private_dns": "ip-10-0-12-18.us-west-2.compute.internal",
            "private_ip": "10.0.12.18",
            "public_dns": "ec2-44-238-77-61.us-west-2.compute.amazonaws.com",
            "public_ip": "44.238.77.61",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "main-eip"
            },
            "tags_all": {
              "Name": "main-eip"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.Project1_igw",
            "aws_vpc.Project1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "Project1_eip_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08f9511be421abe58",
            "arn": "arn:aws:ec2:us-west-2:559050225570:elastic-ip/eipalloc-08f9511be421abe58",
            "association_id": "eipassoc-04bc4b002d545390d",
            "domain": "vpc",
            "id": "eipalloc-08f9511be421abe58",
            "network_border_group": "us-west-2",
            "network_interface": "eni-01a5cd166347e37f6",
            "private_dns": "ip-10-0-14-44.us-west-2.compute.internal",
            "private_ip": "10.0.14.44",
            "public_dns": "ec2-44-227-149-107.us-west-2.compute.amazonaws.com",
            "public_ip": "44.227.149.107",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "main-eip-b"
            },
            "tags_all": {
              "Name": "main-eip-b"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.Project1_igw",
            "aws_vpc.Project1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ansible_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04999cd8f2624f834",
            "arn": "arn:aws:ec2:us-west-2:559050225570:instance/i-04f2370e99be1f5ce",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04f2370e99be1f5ce",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "toche-key1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-05793344cc39759ed",
            "private_dns": "ip-10-0-12-253.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.12.253",
            "public_dns": "ec2-54-213-134-144.us-west-2.compute.amazonaws.com",
            "public_ip": "54.213.134.144",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-01e6c3cf349e30990",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cc37478f29c1fdbe",
            "tags": {
              "Name": "project1-ansible-server"
            },
            "tags_all": {
              "Name": "project1-ansible-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-014175e6d6c987301",
              "sg-086614eb9d784c08f",
              "sg-0e3fc21fe8685e066",
              "sg-0fb08a3d85b6653c3"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.Project1_key",
            "aws_security_group.Project1_sg_http",
            "aws_security_group.Project1_sg_jenkins",
            "aws_security_group.Project1_sg_sq",
            "aws_security_group.Project1_sg_ssh",
            "aws_subnet.Project1_public",
            "aws_vpc.Project1",
            "data.aws_ami.server_ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "deploy_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04999cd8f2624f834",
            "arn": "arn:aws:ec2:us-west-2:559050225570:instance/i-070e2c2f22ec425ff",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-070e2c2f22ec425ff",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "stopped",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "toche-key1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0fbf72b7f9c6a6d2e",
            "private_dns": "ip-10-0-9-233.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.9.233",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0a1355c2511a4a5a5",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0745d12287c43e816",
            "tags": {
              "Name": "deploy-server"
            },
            "tags_all": {
              "Name": "deploy-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-086614eb9d784c08f",
              "sg-0e3fc21fe8685e066",
              "sg-0fb08a3d85b6653c3"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.Project1_key",
            "aws_security_group.Project1_sg_http",
            "aws_security_group.Project1_sg_jenkins",
            "aws_security_group.Project1_sg_ssh",
            "aws_subnet.Project1_private",
            "aws_vpc.Project1",
            "data.aws_ami.server_ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04999cd8f2624f834",
            "arn": "arn:aws:ec2:us-west-2:559050225570:instance/i-050ff8a04249fa623",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-050ff8a04249fa623",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "toche-key1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-004f055f30b00c013",
            "private_dns": "ip-10-0-12-72.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.12.72",
            "public_dns": "ec2-34-222-87-188.us-west-2.compute.amazonaws.com",
            "public_ip": "34.222.87.188",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-079d0814bb58e8173",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cc37478f29c1fdbe",
            "tags": {
              "Name": "project1-jenkins-server"
            },
            "tags_all": {
              "Name": "project1-jenkins-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-086614eb9d784c08f",
              "sg-0e3fc21fe8685e066",
              "sg-0fb08a3d85b6653c3"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.Project1_key",
            "aws_security_group.Project1_sg_http",
            "aws_security_group.Project1_sg_jenkins",
            "aws_security_group.Project1_sg_ssh",
            "aws_subnet.Project1_public",
            "aws_vpc.Project1",
            "data.aws_ami.server_ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "k8s_workstation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04999cd8f2624f834",
            "arn": "arn:aws:ec2:us-west-2:559050225570:instance/i-05ba5dede943b723a",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "Ec2-manage-s3-profile",
            "id": "i-05ba5dede943b723a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "toche-key1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-01ac559b521bef9d7",
            "private_dns": "ip-10-0-12-135.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.12.135",
            "public_dns": "ec2-34-220-33-212.us-west-2.compute.amazonaws.com",
            "public_ip": "34.220.33.212",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-07514a2a06c379488",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cc37478f29c1fdbe",
            "tags": {
              "Name": "Project1-k8s-workstation"
            },
            "tags_all": {
              "Name": "Project1-k8s-workstation"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-086614eb9d784c08f",
              "sg-096bb52afd6a7b839",
              "sg-0e3fc21fe8685e066"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.Admin_access",
            "aws_key_pair.Project1_key",
            "aws_security_group.Project1_sg_http",
            "aws_security_group.Project1_sg_ssh",
            "aws_subnet.Project1_public",
            "aws_vpc.Project1",
            "data.aws_ami.server_ami",
            "data.aws_iam_role.ec2_manage",
            "data.aws_security_group.Project1_sg_https"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "Project1_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:559050225570:internet-gateway/igw-053feb52709da6dd2",
            "id": "igw-053feb52709da6dd2",
            "owner_id": "559050225570",
            "tags": {
              "Name": "main-igw"
            },
            "tags_all": {
              "Name": "main-igw"
            },
            "vpc_id": "vpc-0b16e539a6d9d52b8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.Project1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "Project1_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-024f5fc4012b36169",
            "association_id": "eipassoc-03e589d9121120a2a",
            "connectivity_type": "public",
            "id": "nat-0ee1e69dcbd6014e5",
            "network_interface_id": "eni-02b55d3ac199661e8",
            "private_ip": "10.0.12.18",
            "public_ip": "44.238.77.61",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0cc37478f29c1fdbe",
            "tags": {
              "Name": "main-nat"
            },
            "tags_all": {
              "Name": "main-nat"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.Project1_eip",
            "aws_internet_gateway.Project1_igw",
            "aws_subnet.Project1_public",
            "aws_vpc.Project1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "Project1_nat_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08f9511be421abe58",
            "association_id": "eipassoc-04bc4b002d545390d",
            "connectivity_type": "public",
            "id": "nat-05101addf91863406",
            "network_interface_id": "eni-01a5cd166347e37f6",
            "private_ip": "10.0.14.44",
            "public_ip": "44.227.149.107",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0ea97257773ddc1d2",
            "tags": {
              "Name": "main-nat-b"
            },
            "tags_all": {
              "Name": "main-nat-b"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.Project1_eip_b",
            "aws_internet_gateway.Project1_igw",
            "aws_subnet.Project1_public_b",
            "aws_vpc.Project1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "Project1_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-053feb52709da6dd2",
            "id": "r-rtb-09b425c30d79e31081080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-09b425c30d79e3108",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.Project1_igw",
            "aws_route_table.Project1_rt",
            "aws_vpc.Project1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "Project1_route_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0a816043a300a62b41080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0ee1e69dcbd6014e5",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a816043a300a62b4",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.Project1_eip",
            "aws_internet_gateway.Project1_igw",
            "aws_nat_gateway.Project1_nat",
            "aws_route_table.Project1_rt_private",
            "aws_subnet.Project1_public",
            "aws_vpc.Project1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "Project1_route_private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-02ec35f1b826905551080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-05101addf91863406",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-02ec35f1b82690555",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.Project1_eip_b",
            "aws_internet_gateway.Project1_igw",
            "aws_nat_gateway.Project1_nat_b",
            "aws_route_table.Project1_rt_private_b",
            "aws_subnet.Project1_public_b",
            "aws_vpc.Project1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Project1_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:559050225570:route-table/rtb-09b425c30d79e3108",
            "id": "rtb-09b425c30d79e3108",
            "owner_id": "559050225570",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-053feb52709da6dd2",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "main-rt"
            },
            "tags_all": {
              "Name": "main-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b16e539a6d9d52b8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.Project1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Project1_rt_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:559050225570:route-table/rtb-0a816043a300a62b4",
            "id": "rtb-0a816043a300a62b4",
            "owner_id": "559050225570",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0ee1e69dcbd6014e5",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "main-rt-private"
            },
            "tags_all": {
              "Name": "main-rt-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b16e539a6d9d52b8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.Project1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Project1_rt_private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:559050225570:route-table/rtb-02ec35f1b82690555",
            "id": "rtb-02ec35f1b82690555",
            "owner_id": "559050225570",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-05101addf91863406",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "main-rt-private_b"
            },
            "tags_all": {
              "Name": "main-rt-private_b"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b16e539a6d9d52b8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.Project1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Project1_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-059e274c6de7de4fe",
            "route_table_id": "rtb-09b425c30d79e3108",
            "subnet_id": "subnet-0cc37478f29c1fdbe"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.Project1_rt",
            "aws_subnet.Project1_public",
            "aws_vpc.Project1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Project1_rta_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00ec167585c9fa486",
            "route_table_id": "rtb-09b425c30d79e3108",
            "subnet_id": "subnet-0ea97257773ddc1d2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.Project1_rt",
            "aws_subnet.Project1_public_b",
            "aws_vpc.Project1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Project1_rta_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-065f5ce6367b2500a",
            "route_table_id": "rtb-0a816043a300a62b4",
            "subnet_id": "subnet-0745d12287c43e816"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.Project1_rt_private",
            "aws_subnet.Project1_private",
            "aws_vpc.Project1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Project1_rta_private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05498f9824c2e6fce",
            "route_table_id": "rtb-02ec35f1b82690555",
            "subnet_id": "subnet-0ed22b76f45adb9f6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.Project1_rt_private_b",
            "aws_subnet.Project1_private_b",
            "aws_vpc.Project1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Project1_sg_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:559050225570:security-group/sg-086614eb9d784c08f",
            "description": "Allow HTTP access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-086614eb9d784c08f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "main-sg-http",
            "name_prefix": "",
            "owner_id": "559050225570",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b16e539a6d9d52b8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.Project1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Project1_sg_jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:559050225570:security-group/sg-0fb08a3d85b6653c3",
            "description": "Allow Jenkins access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fb08a3d85b6653c3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "main-sg-jenkins",
            "name_prefix": "",
            "owner_id": "559050225570",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b16e539a6d9d52b8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.Project1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Project1_sg_sq",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:559050225570:security-group/sg-014175e6d6c987301",
            "description": "Allow Sonarqube access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-014175e6d6c987301",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 9000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9000
              }
            ],
            "name": "main-sg-sq",
            "name_prefix": "",
            "owner_id": "559050225570",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b16e539a6d9d52b8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.Project1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Project1_sg_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:559050225570:security-group/sg-0e3fc21fe8685e066",
            "description": "Allow SSH access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e3fc21fe8685e066",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "main-sg-ssh",
            "name_prefix": "",
            "owner_id": "559050225570",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b16e539a6d9d52b8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.Project1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Project1_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:559050225570:subnet/subnet-0745d12287c43e816",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.9.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0745d12287c43e816",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "559050225570",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "main-private"
            },
            "tags_all": {
              "Name": "main-private"
            },
            "vpc_id": "vpc-0b16e539a6d9d52b8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.Project1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Project1_private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:559050225570:subnet/subnet-0ed22b76f45adb9f6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ed22b76f45adb9f6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "559050225570",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "main-private-b"
            },
            "tags_all": {
              "Name": "main-private-b"
            },
            "vpc_id": "vpc-0b16e539a6d9d52b8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.Project1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Project1_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:559050225570:subnet/subnet-0cc37478f29c1fdbe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cc37478f29c1fdbe",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "559050225570",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "main-public"
            },
            "tags_all": {
              "Name": "main-public"
            },
            "vpc_id": "vpc-0b16e539a6d9d52b8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.Project1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Project1_public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:559050225570:subnet/subnet-0ea97257773ddc1d2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.14.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ea97257773ddc1d2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "559050225570",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "main-public-b"
            },
            "tags_all": {
              "Name": "main-public-b"
            },
            "vpc_id": "vpc-0b16e539a6d9d52b8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.Project1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "Project1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:559050225570:vpc/vpc-0b16e539a6d9d52b8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/20",
            "default_network_acl_id": "acl-03803d2aaffe45a79",
            "default_route_table_id": "rtb-0d7e698c2f98c22a7",
            "default_security_group_id": "sg-0b4f7ee0867054053",
            "dhcp_options_id": "dopt-0403323bdb2eb36fe",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b16e539a6d9d52b8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d7e698c2f98c22a7",
            "owner_id": "559050225570",
            "tags": {
              "Name": "main"
            },
            "tags_all": {
              "Name": "main"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}